--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         <activity
             android:name=".ui.MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.DemoApp.NoActionBar">
+            android:theme="@style/shake_AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,6 +22,7 @@
         </activity>
         <activity
             android:name=".ui.SettingsActivity"
+            android:theme="@style/shake_AppTheme"
             android:parentActivityName=".ui.MainActivity"
             android:exported="true">
         </activity>
