Adjust build.gradle

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,10 @@ plugins {
     id 'kotlin-android'
 }
 
+
+Properties localProps = new Properties()
+localProps.load(new FileInputStream(file('../local.properties')))
+
 android {
     compileSdk 31
 
@@ -16,6 +20,15 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    signingConfigs {
+        release {
+            storeFile file('../demo-release.jks')
+            keyPassword localProps['keyPassword']
+            keyAlias localProps['keyAlias']
+            storePassword localProps['storePassword']
+        }
+    }
+
     buildTypes {
         debug {
             minifyEnabled false
@@ -24,6 +37,7 @@ android {
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
     compileOptions {
@@ -35,18 +49,6 @@ android {
     }
     buildFeatures {
         viewBinding true
-    }
-
-    signingConfigs {
-        release {
-            Properties localProps = new Properties()
-            localProps.load(new FileInputStream(file('../local.properties')))
-
-            storeFile file('demo-release.jks')
-            keyPassword localProps['keyPassword']
-            keyAlias localProps['keyAlias']
-            storePassword localProps['storePassword']
-        }
     }
 
     flavorDimensions "environment"
