--- a/settings.gradle
+++ b/settings.gradle
@@ -6,5 +6,5 @@ dependencyResolutionManagement {
         jcenter() // Warning: this repository is going to shut down soon
     }
 }
-rootProject.name = "DemoApp"
+rootProject.name = "shake-demo-android"
 include ':app'
