--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,14 +8,22 @@ Properties localProps = new Properties()
 localProps.load(new FileInputStream(file('../local.properties')))
 
 android {
-    compileSdk 33
+    compileSdk = 36
+
+    namespace "com.shakebugs.demo"
+
+    buildFeatures {
+        buildConfig = true
+    }
 
     defaultConfig {
-        applicationId "com.shakebugs.demo"
+        applicationId "com.shakebugs.sdk.demo"
         minSdk 23
-        targetSdk 33
+        targetSdk 36
         versionCode 9
-        versionName "1.1.0"
+        versionName "1.2.0"
+
+        buildConfigField "String", "SHAKE_API_KEY", "\"${localProps['shakeApiKey']}\""
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -50,21 +58,11 @@ android {
     buildFeatures {
         viewBinding true
     }
-
-    flavorDimensions "environment"
-
-    productFlavors {
-        playStore {
-            dimension "environment"
-            buildConfigField "String", "CLIENT_ID", '"lEtd511X2gn3qsgR1RWPVEL15RpKbdY0r6x99LFP"'
-            buildConfigField "String", "CLIENT_SECRET", '"nErTSH6tgNB1dMDAQKQaMNA1d8yD8tEDl82XPrYQEucvG9vFy89JqWZ"'
-        }
-    }
 }
 
 dependencies {
 
-    implementation 'com.shakebugs:shake:16.2.2'
+    implementation 'com.shakebugs:shake:17.1.4'
 
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
